# UniCommander

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
include/: test_runner.h
include/ui/: base_window.h  confirm_widget.h  directory_panel.h  directory_panel_widget.h  events.h  fkey_bar_widget.h  help_widget.h  help_window.h  message_loop.h  modal_widget.h  panel.h  render_context.h  terminal_panel.h  terminal_panel_widget.h  widget.h  window.h
src/: main.cpp  test_runner.cpp  test_runner.h
src/platform/linux/: x11_render_context.cpp  x11_render_context.h  x11_window.cpp  x11_window.h
src/platform/macos/: cocoa_render_context.h  cocoa_render_context.mm  cocoa_window.h  cocoa_window.mm
src/platform/windows/: win32_render_context.cpp  win32_render_context.h  win32_window.cpp  win32_window.h
src/ui/: base_window.cpp  confirm_widget.cpp  directory_panel.cpp  directory_panel_widget.cpp  fkey_bar_widget.cpp  help_widget.cpp  help_window.cpp  message_loop.cpp  modal_widget.cpp  terminal_panel_widget.cpp  widget.cpp
tests/: CLAUDE.md  README.md  driver.py  test_activation.py  test_copy.py  test_fkey_bar.py  test_focus.py  test_help.py  test_initial_state.py  test_modifiers.py  test_navigation.py  test_quit.py  test_right_panel.py  utils.py
